--- a/EconomicTracking.Dal/EconomicTracking.Dal.csproj
+++ b/EconomicTracking.Dal/EconomicTracking.Dal.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Material.cs" />
     <Compile Include="overheads.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RMCode.cs" />
     <Compile Include="SalesQty.cs" />
     <Compile Include="Scrap.cs" />
     <Compile Include="Settlement.cs" />
