--- a/EconomicTracking/EconomicTracking.csproj
+++ b/EconomicTracking/EconomicTracking.csproj
@@ -138,6 +138,7 @@
     <Reference Include="System.Printing">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web">
       <Private>True</Private>
     </Reference>
@@ -187,6 +188,9 @@
     <Reference Include="WPF.Themes">
       <HintPath>..\packages\DotNetProjectsWPFToolkit.4.0.0.0\lib\net40\WPF.Themes.dll</HintPath>
     </Reference>
+    <Reference Include="WPFTextBoxAutoComplete">
+      <HintPath>..\packages\WPFTextBoxAutoComplete.1.0.0\lib\net40\WPFTextBoxAutoComplete.dll</HintPath>
+    </Reference>
     <Reference Include="WPFToolkit">
       <HintPath>..\packages\WPFToolkit.3.5.50211.1\lib\WPFToolkit.dll</HintPath>
     </Reference>
@@ -219,6 +223,19 @@
     </ApplicationDefinition>
     <Compile Include="BOMReports.xaml.cs">
       <DependentUpon>BOMReports.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EditBOM.xaml.cs">
+      <DependentUpon>EditBOM.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EditSalsQty.xaml.cs">
+      <DependentUpon>EditSalsQty.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Page1.xaml.cs">
+      <DependentUpon>Page1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WaterMark.cs" />
+    <Compile Include="EditSettlement.xaml.cs">
+      <DependentUpon>EditSettlement.xaml</DependentUpon>
     </Compile>
     <Compile Include="FinalSReports.xaml.cs">
       <DependentUpon>FinalSReports.xaml</DependentUpon>
@@ -263,6 +280,18 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="EditBOM.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="EditSalsQty.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="EditSettlement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="FinalSReports.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -282,6 +311,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ReciepyReports.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -404,6 +437,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Common\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="NewFolder1\EconomicTracking.mdf">
