--- a/EconomicTracking/packages.config
+++ b/EconomicTracking/packages.config
@@ -9,5 +9,6 @@
   <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
+  <package id="WPFTextBoxAutoComplete" version="1.0.0" targetFramework="net45" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net45" />
 </packages>
